--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
-        applicationId "com.independentdev.together"
+        applicationId "com.independentdev.writer"
         minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
@@ -32,9 +32,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.android.support:support-v4:25.1.1'
 
-    compile 'com.google.firebase:firebase-core:10.0.1'
-    compile 'com.google.firebase:firebase-messaging:10.0.1'
-
     compile 'com.github.bumptech.glide:glide:3.7.0'
 
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
@@ -45,5 +42,4 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 }
 
-apply plugin: 'com.google.gms.google-services'
 apply plugin: 'realm-android'
