--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.independentdev.writer">
+    package="com.independentdev.ink">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name="com.independentdev.writer.app.MyApplication"
+        android:name="com.independentdev.ink.app.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name="com.independentdev.writer.ui.activity.SplashScreenActivity">
+        <activity android:name="com.independentdev.ink.ui.activity.SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,7 +20,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.independentdev.writer.ui.activity.MainActivity"
+            android:name="com.independentdev.ink.ui.activity.MainActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar" />
     </application>
