--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.android.support:support-v4:25.1.1'
 
+    compile 'com.google.firebase:firebase-core:10.0.1'
+    compile 'com.google.firebase:firebase-messaging:10.0.1'
+
     compile 'com.github.bumptech.glide:glide:3.7.0'
 
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
@@ -42,4 +45,5 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 }
 
+apply plugin: 'com.google.gms.google-services'
 apply plugin: 'realm-android'
