--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,11 @@ dependencies {
 
     compile 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+
+    compile 'com.android.support:cardview-v7:25.1.1'
+    compile 'com.android.support:recyclerview-v7:25.1.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
